--- a/voiture-website/src/Components/Navbar/Navbar.css
+++ b/voiture-website/src/Components/Navbar/Navbar.css
@@ -4,11 +4,14 @@
     align-items: center;
     margin: 40px 120px;
     color: white;
+    font-family: 'Outfit', sans-serif;
+    cursor: pointer;
 }
 
 .nav-logo {
+    
     font-family: Outfit;
-    font-size: 30px;
+    font-size: 42px;
     font-weight: 500;
     
 }
@@ -16,14 +19,26 @@
     display: flex;
     list-style: none;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
     gap: 90px;
 }
 
-.nav-contacts {
+.nav-contact {
     border-radius: 50px;
     padding: 10px 38px;
-    background-color: #ffffff;
+    background-color: #fff;
     color: #262626;
     
+}
+.nav-contact:hover {
+    background-color: orangered;
+    
+}
+.nav-menu li {
+    cursor: pointer;
+}
+
+.nav-menu li:hover {
+    
+    color: #FFA500;
 }
